@@ -196,6 +196,34 @@ filename.scanner.source.keywords.DVDRip=DVDR
 filename.scanner.source.keywords.WEBDL=WEB-DL,iTunes
 filename.scanner.source.keywords.DVD=DVD5,DVD9
 
+# This is the list of languages to detect. Each Language listed here must have a corresponding language flag in skin resource/languages folder.
+# Each of these languages needs a detection property named 'filename.scanner.language.<language>' with a list of the CASE SENSITIVE
+# language codes to search for. See here: http://en.wikipedia.org/wiki/List_of_ISO_639-1_codes
+filename.scanner.language.keywords=Chinese,Dual_Language,English,French,German,Hebrew,Hindi,Hungarian,Italian,Japanese,Norwegian,Polish,Portuguese,Russian,Spanish,Swedish,Thai,VO,Danish,Dutch,Tagalog
+
+# These are the language codes that correspond to the keywords specified in the 'filename.scanner.language.keywords' property
+filename.scanner.language.Chinese=ZH,Zh,zh,CHI,Chi,chi,CHINESE,Chinese,chinese
+filename.scanner.language.Dual_Language=DL,dl
+filename.scanner.language.English=ENG,EN,ENGLISH,eng,en,english,Eng
+filename.scanner.language.French=FRA,FR,FRENCH,VF,fra,fr,french,vf,Fra
+filename.scanner.language.German=GER,DE,GERMAN,ger,de,german,Ger
+filename.scanner.language.Hebrew=HEB,HE,HEBREW,HEBDUB,heb,he,hebrew,hebdub,Heb
+filename.scanner.language.Hindi=HI,HIN,HINDI,hi,hin,hindi,Hin,Hindi
+filename.scanner.language.Hungarian=HUN,HU,HUNGARIAN,hun,hu,hungarian
+filename.scanner.language.Italian=ITA,IT,ITALIAN,ita,it,italian,Ita
+filename.scanner.language.Japanese=JPN,JP,JAPANESE,jpn,jp,japanese,Jpn
+filename.scanner.language.Norwegian=NOR,NORWEGIAN,nor,norwegian,Norwegian
+filename.scanner.language.Polish=POL,PL,POLISH,PLDUB,pol,pl,polish,pldub,Pol
+filename.scanner.language.Portuguese=POR,PT,PORTUGUESE,por,pt,portuguese,Por
+filename.scanner.language.Russian=RUS,RU,RUSSIAN,rus,ru,russian,Rus
+filename.scanner.language.Spanish=SPA,ES,SPANISH,spa,es,spanish,Spa
+filename.scanner.language.Swedish=SV,Sv,sv,SWE,Swe,swe,SWEDISH,Swedish,swedish
+filename.scanner.language.Thai=TH,Th,th,THA,Tha,tha,THAI,Thai,thai
+filename.scanner.language.VO=VO,VOSTFR,vo,vostfr
+filename.scanner.language.Danish=DA,DAN,DANISH,da,dan,danish
+filename.scanner.language.Dutch=NL,Nl,nl,NLD,Nld,nld,DUTCH,Dutch,dutch
+filename.scanner.language.Tagalog=TL,Tl,tl,TGL,Tgl,tgl,TAGALOG,Tagalog,tagalog
+
 ################################################################################
 # These parameters control the pre-determined playLink attribute in the generated XML
 # Depending on the type of the file, these parameters will control the playLink output
